# test_task_CPI

./: .env.sample  calc.py  llm_test.ipynb  pyproject.toml
back/: germany_cpi_historical.csv  main.py  parse_cpi.py  requirements.txt
back/app/api/: dependencies.py
back/app/api/routers/: cpi.py  health.py  valuation.py
back/app/core/: constants.py  exceptions.py
back/app/core/config/: __init__.py  base.py
back/app/prompts/: prompts.py
back/app/schemas/: valuation.py
back/app/services/: ai_analysis_service.py  cpi_parser.py  cpi_parser_service.py  cpi_service.py  llm_service.py  valuation_service.py
back/app/tests/: conftest.py
back/app/tests/integration_tests/: conftest.py  test_cpi_endpoints.py  test_valuation_endpoints.py
back/app/tests/unit_tests/cpi_parser_service/: conftest.py  test_cpi_parser_service.py
back/app/tests/unit_tests/cpi_service/: conftest.py  test_cpi_service.py
back/app/tests/unit_tests/valuation_service/: conftest.py  test_valuation_service.py
front/: README.md
front/src/app/components/forms/valuation-form/: valuation-form.component.ts
